--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="color_a">#FF5722</color>
     <color name="color_b">#15222E</color>
+    <color name="color_c">#ECEBEB</color>
 </resources>
