--- a/app/src/main/res/layout-v28/item_movie.xml
+++ b/app/src/main/res/layout-v28/item_movie.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="240dp"
+    android:layout_height="280dp"
     android:layout_margin="6dp"
     app:cardCornerRadius="15dp"
     app:cardElevation="10dp">
@@ -12,36 +12,49 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#F68C6D"
-        >
+        android:background="@color/color_b">
+
         <ImageView
             android:id="@+id/ivMovie"
             android:layout_width="match_parent"
-            android:layout_height="220dp"
-            android:scaleType="centerCrop"
+            android:layout_height="0dp"
             android:contentDescription="@string/movie"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toTopOf="@+id/tvName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+
+        <View
+            android:id="@+id/view"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:background="@drawable/gradient"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/tvName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="2dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="2dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="8dp"
+            android:ellipsize="end"
             android:fontFamily="sans-serif-black"
+            android:gravity="center"
+            android:maxLines="1"
             android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="12sp"
+            android:textColor="#ECEBEB"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:text="I do I did" />
-
+            app:layout_constraintTop_toTopOf="@+id/view"
+            tools:text="I do i do" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 
 </androidx.cardview.widget.CardView>
