--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,10 +13,15 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/color</item>
         <!-- Customize your theme here. -->
     </style>
-    <style name="Theme.AmadyDev" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.AmadyDev" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="colorPrimary">@color/color_a</item>
+        <item name="colorPrimaryVariant">@color/color_a</item>
+        <item name="colorOnPrimary">@color/color_c</item>
+
         <item name="colorSecondary">@color/color_b</item>
+        <item name="colorSecondaryVariant">@color/color_b</item>
+        <item name="colorOnSecondary">@color/color_b</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">@color/color_a</item>
+<!--        <item name="android:statusBarColor" tools:targetApi="l">@color/color_a</item>-->
     </style>
 </resources>
