--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -46,7 +46,10 @@
         android:id="@+id/tvEmpty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
         android:layout_centerInParent="true"
+        android:gravity="center_horizontal"
         android:text="@string/it_seems_we_don_t_have_this_movie"
         android:textColor="@color/color_a"
         android:textSize="20sp"
